tests/reference/asr-test_str_to_int-61553e7.stderr
semantic error: Unexpected args, Int expects (int) or (real) or (complex) as arguments
 --> tests/errors/test_str_to_int.py:2:11
  |
2 |     print(int('3abc'))
  |           ^^^^^^^^^^^ 
